[project]
name = "exchange-hub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django-allauth[mfa,socialaccount,steam]>=65.7.0",
    "faker>=40.5.1",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]
